# Multimodal-Agent-RAG

./: LICENSE  README.md  test_embedding_mixed.py  test_embedding_mixed_v2.py  test_embedding_text_v2.py  test_rerank.py  todo.md  前后端启动.txt
backend/: .env  .env.example  .gitignore  local.db  local.db-shm  local.db-wal  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  chunks.py  files.py  knowledge_base.py  recall.py  settings.py
backend/app/core/: __init__.py  config.py  database.py  rerank_model.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  agent_workflow.py  chat.py  embedding.py  llm.py  parser.py  rerank.py  vector_store.py  vlm.py
backend/app/tasks/: __init__.py  celery_app.py  parse_tasks.py  vectorize_tasks.py
backend/app/utils/: __init__.py
backend/storage/chroma_db/277de12d-bd2a-4056-b82e-2fb12c627984/: index_metadata.pickle
backend/storage/uploads/14e54fd1-f38d-4841-aacf-22e9cdff6b5c/: 22e5de99-2fe3-4eb1-a684-84f3e0072a7f_转人工(未优化前版本12_8备份).txt
backend/storage/uploads/270004aa-bd77-4bd3-b6d0-d56ace2d757a/: 2b805ab6-d1b9-434b-949c-49253d0139d3_LS.docx  3ac839d8-2508-4832-9dc9-234eec80365d_齐雨凡简历（第一版本）.docx
backend/storage/uploads/324b6c8b-cb5d-4848-a446-9db22bc740b8/: 3afa704a-190e-429c-a84e-932fe807e82c_dify局域网接入ollama大模型.txt
backend/storage/uploads/a4ee515b-1da1-43af-a3b5-e790ac72c32f/: 0198d8ac-5f3b-46cc-9491-5d5ee571390a_项目2头疼的点.txt  0f289339-7580-4366-aa9b-b7d7a0963bd2_excel数据处理.txt  (+23 more)
(+66 files in other folders)
