[project]
name = "rag-backend"
version = "0.1.0"
description = "本地化多模态 Agent RAG 系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
